Style updates to fix input covering buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,19 @@ input {
 	margin-left: 14px;
 }
 
+.textSpan {
+
+	padding-top: -10px;
+	margin-top: -20px;
+	font-size: 30px;
+}
+
+.toDoInput {
+	height: 31px;
+	width: 350px;
+	background-color: #eee;
+}
+
 .lineButton {
 	width: 42px;
 	height: 35px;
